ensure twitter info for speakers displays below avatar on small resolutions

--- a/css/site.css
+++ b/css/site.css
@@ -220,6 +220,7 @@ ul.announcements a {
 
 .speaker .twitter {
   font-size: .9em;
+  display: block;
 }
 
 .speaker .employer {
